--- a/src/public/scss/components/loader.scss
+++ b/src/public/scss/components/loader.scss
@@ -2,11 +2,17 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  // opacity: 0;
-  // pointer-events: none;
-  transition: all .3s ease-out;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity .25s ease-out;
   transform: translate(-50%, -50%);
+
+  &.in-view {
+    opacity: 1;
+    pointer-events: auto;
+  }
 }
+
 
 .lds-roller {
   display: inline-block;
