--- a/src/views/add-listing.html
+++ b/src/views/add-listing.html
@@ -28,7 +28,11 @@
         <li><a href="browse-listings.html">Listings</a></li>
         <li><a href="browse-places.html">Places</a></li>
         <li><a href="account.html">Account</a></li>
-
+        <li>
+          <input name="notifications-checkbox" id="notifications-trigger" type="checkbox" />
+          <label for="notifications-trigger"><i class="fas fa-bell fa-icon"></i></label>
+          <ul id="js-notification-container" class="notifications-container"></ul>
+        </li>
       </ul>
       
     </div>
