--- a/src/views/browse-listings.html
+++ b/src/views/browse-listings.html
@@ -10,6 +10,18 @@
 
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
+  <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.4.2/css/solid.css"
+    integrity="sha384-uKQOWcYZKOuKmpYpvT0xCFAs/wE157X5Ua3H5onoRAOCNkJAMX/6QF0iXGGQV9cP"
+    crossorigin="anonymous"
+  />
+  <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.4.2/css/fontawesome.css"
+    integrity="sha384-HU5rcgG/yUrsDGWsVACclYdzdCcn5yU8V/3V84zSrPDHwZEdjykadlgI6RHrxGrJ"
+    crossorigin="anonymous"
+  />
   <link rel="stylesheet" type="text/css" href="/css/styles.min.css">
   <title>Browse - listings</title>
 </head>
@@ -26,7 +38,11 @@
         <li><a href="browse-listings.html">Listings</a></li>
         <li><a href="browse-places.html">Places</a></li>
         <li><a href="account.html">Account</a></li>
-
+        <li>
+          <input name="notifications-checkbox" id="notifications-trigger" type="checkbox" />
+          <label for="notifications-trigger"><i class="fas fa-bell fa-icon"></i></label>
+          <ul id="js-notification-container" class="notifications-container"></ul>
+        </li>
       </ul>
 
     </div>
@@ -57,7 +73,11 @@
     </nav>
   </header>
 
-  <main class="main-content main-content--listings">
+  <div id="js-loader" class="loader in-view">
+    <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+  </div>
+
+  <main class="main-content main-content--listings hidden">
     <section id="js-listings" class="listings">
 
       <div class="listings__nav">
@@ -68,11 +88,7 @@
         </form>
       </div>
 
-      <div id="js-listings-flex" class="flex">
-        <div id="js-loader" class="loader">
-          <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-        </div>
-      </div>
+      <div id="js-listings-flex" class="flex"></div>
 
     </section>
   </main>
