final fixes for offline

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -44,7 +44,7 @@
 						<li><a href="account.html">Account</a></li>
 						<li>
 							<input name="notifications-checkbox" id="notifications-trigger" type="checkbox" />
-							<label for="notifications-trigger"><i class="fas fa-bell fa-icon"></i></label>
+							<label for="notifications-trigger">🔔</label>
 							<ul id="js-notification-container" class="notifications-container"></ul>
 						</li>
 					</ul>
