--- a/src/views/account.html
+++ b/src/views/account.html
@@ -40,7 +40,7 @@
         <li><a href="account.html">Account</a></li>
         <li>
           <input name="notifications-checkbox" id="notifications-trigger" type="checkbox" />
-          <label for="notifications-trigger"><i class="fas fa-bell fa-icon"></i></label>
+          <label for="notifications-trigger">🔔</label>
           <ul id="js-notification-container" class="notifications-container"></ul>
         </li>
       </ul>
@@ -88,17 +88,6 @@
         <div class="account__details">
           <div class="details__identity">
             <span class="name"><h2 id="js-name"></h2></span>
-
-            <div class="reviews">
-              <div class="positive">
-                <span class="count" id="js-likes"></span>
-                <span class="fa-icon"><i class="fas fa-thumbs-up"></i></span>
-              </div>
-              <div class="negative">
-                <span class="count" id="js-dislikes"></span>
-                <span class="fa-icon"><i class="fas fa-thumbs-down"></i></span>
-              </div>
-            </div>
           </div>
   
           <div class="details__skills">
